Fix users test for new property
